crates/oxc_react_compiler/tests/snapshots/gating__gating-use-before-decl-ref.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/gating/gating-use-before-decl-ref.js
---
import { c as _c } from "react/compiler-runtime";
import { isForgetEnabled_Fixtures } from "ReactForgetFeatureFlag";
// @gating
import { createRef, forwardRef } from "react";
import { Stringify } from "shared-runtime";
const Foo = forwardRef(Foo_withRef);
const Foo_withRef = isForgetEnabled_Fixtures() ? function Foo_withRef(props, ref) {
	const $ = _c(3);
	let t0;
	if ($[0] !== props || $[1] !== ref) {
		t0 = <Stringify ref={ref} {...props} />;
		$[0] = props;
		$[1] = ref;
		$[2] = t0;
	} else {
		t0 = $[2];
	}
	return t0;
} : function Foo_withRef(props, ref) {
	return <Stringify ref={ref} {...props} />;
};
export const FIXTURE_ENTRYPOINT = {
	fn: eval("(...args) => React.createElement(Foo, args)"),
	params: [{
		prop1: 1,
		prop2: 2,
		ref: createRef()
	}]
};
