crates/oxc_react_compiler/tests/snapshots/gating__gating-use-before-decl.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/gating/gating-use-before-decl.js
---
import { c as _c } from "react/compiler-runtime";
import { isForgetEnabled_Fixtures } from "ReactForgetFeatureFlag";
// @gating
import { memo } from "react";
import { Stringify } from "shared-runtime";
export default memo(Foo);
const Foo = isForgetEnabled_Fixtures() ? function Foo(t0) {
	"use memo";
	const $ = _c(3);
	const { prop1, prop2 } = t0;
	let t1;
	if ($[0] !== prop1 || $[1] !== prop2) {
		t1 = <Stringify prop1={prop1} prop2={prop2} />;
		$[0] = prop1;
		$[1] = prop2;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
} : function Foo({ prop1, prop2 }) {
	"use memo";
	return <Stringify prop1={prop1} prop2={prop2} />;
};
export const FIXTURE_ENTRYPOINT = {
	fn: eval("Foo"),
	params: [{
		prop1: 1,
		prop2: 2
	}]
};
