crates/oxc_react_compiler/tests/snapshots/gating__multi-arrow-expr-export-gating-test.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/gating/multi-arrow-expr-export-gating-test.js
---
import { c as _c } from "react/compiler-runtime";
import { isForgetEnabled_Fixtures } from "ReactForgetFeatureFlag";
// @gating
import { Stringify } from "shared-runtime";
const ErrorView = isForgetEnabled_Fixtures() ? (error, _retry) => {
	const $ = _c(2);
	let t0;
	if ($[0] !== error) {
		t0 = <Stringify error={error} />;
		$[0] = error;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
} : (error, _retry) => <Stringify error={error}></Stringify>;
export const Renderer = isForgetEnabled_Fixtures() ? (props) => {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div><span /><ErrorView /></div>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
} : (props) => (<div>
    <span></span>
    <ErrorView></ErrorView>
  </div>);
export const FIXTURE_ENTRYPOINT = {
	fn: eval("Renderer"),
	params: [{}]
};
